feat：优化详情页，新增api调用维护监控
